2006-05-07  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* examples/gtk/testprint.py: Add a python print demonstration,
	based on testprint.c in gtk+ sources.  It is missing a print
	dialog, though...

	* examples/Makefile.am (EXTRA_DIST): add gtk/testprint.py.

	* gtk/gtk.override: Include pycairo.
	(_wrap_gtk_print_context_get_cairo): Override to make
	gtk.PrintContext return a gtk.gdk.CairoContext object instead of a
	cairo.Context one.

	* configure.in: pycairo dependency no longer optional.

	* gtk/gtk-2.10-types.defs (PrintContext): Missing gtk.PrintContext.

	* gtk/gtk-2.10.defs: Make 'parent' parameter of
	gtk_print_operation_run optional and None acceptable.

	* gtk/gtk-2.10-types.defs: Declare type gtk.PageSetup.
	(PrintSettings): idem for gtk.PrintSettings.
	(PaperSize): Add boxed gtk.PaperSize.

	* gtk/gdk.override (_wrap_gdk_bitmap_create_from_data) 
	(_wrap_gdk_pixmap_create_from_data): Override to fix a compilation
	warning and add bounds check on the data parameter.

	* gtk/gdkcairo.override: Add explicit braces to keep gcc happy.

	* gtk/Makefile.am: Make sure the defs are regenerated when
	configure runs, due to possible changes in gtk+ 2.10 detection.
	(gtk.c): Make gtk.c depend on gdk-types.defs to force it to be
	generated early.
	(.defs.c): Remove the recursive make invocation, no longer needed.

	* gtk/Makefile.am (defs_DATA): Install gdk.defs, gtk.defs,
	gdk-types.defs, and gtk-types.defs.  Thanks Olav Vitters
	Fixes bug #340920.

2006-05-06  Johan Dahlin  <jdahlin@async.com.br>

	* codegen/createdefs.py:
	* configure.in:
	* gtk/Makefile.am:
	* gtk/gdk-2.10.defs:
	* gtk/gdk-base-types.defs:
	* gtk/gdk-base.defs:
	* gtk/gdk-types.defs:
	* gtk/gdk.defs:
	* gtk/gdk.override:
	* gtk/gtk-2.10-types.defs:
	* gtk/gtk-2.10.defs:
	* gtk/gtk-base-types.defs:
	* gtk/gtk-base.defs:
	* gtk/gtk-types.defs:
	* gtk/gtk.defs:

	Add conditional support for Gtk+ 2.10 add new api.

2006-05-06  Johan Dahlin  <jdahlin@async.com.br>
