@@ -1,5 +1,12 @@
 2006-05-07  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
+	* gtk/gtk.override (_wrap_add_log_handlers)
+	(_wrap_remove_log_handlers): Try to use
+	pyg_add_warning_redirection and pyg_disable_warning_redirections
+	if available.
+
+	* pangomodule.c (initpango): idem.
+
 	* examples/gtk/testprint.py: Add a python print demonstration,
 	based on testprint.c in gtk+ sources.  It is missing a print
 	dialog, though...
